  - capture - can have negative cert.validDays/cert.remainingDays (thanks mcgillowen)
  - capture - added cert.remainingSeconds/cert.remainingSeconds (thanks mcgillowen)
  - capture - cert.remainingDays is now based on the firstPacket of session
              instead of current time (thanks mcgillowen)
  - capture - JA4 support
  - capture - JA3/JA4 support for smtp STARTTLS
  - cont3xt - new bulk UI and support for bulk queries
  - cont3xt - lots of keyboard shortcut improvements
  - cont3xt - new array syntax for links substitution
  - cont3xt - new OpenSearch/Elasticsearch integration (config file only)
  - cont3xt - new viewRoles in config file per integration to control access
  - cont3xt - transfer ownership of resources
  - viewer - removed x-moloch-auth
  - viewer - files/history/stats now have cluster dropdown for multiviewer
  - viewer - http.request.FIELD and http.response.FIELD supported
  - viewer - add editor for resources
  - viewer - transfer ownership of resources
  - parliament - dashboard-only mode removed, if you want users to just see
                 the dashboard don't assign them the parliamentUser role
  - parliament - configuration is now stored in opensearch/elasticsearch


4.5.1 2023/09/xx
  - release - fix viewer systemd file
  - all - handle cookies encoded, bad proxy

4.5.0 2023/09/13
  - release - node 16.20.2
  - release - added missingok to default logrotate for arkime
  - capture - dns answers were double parsed
  - capture - custom-fields honors viewerOnly:true
  - capture - added dns.https fields
  - capture - added cert:certificate-authority tag (thanks mcgillowen )
  - cont3xt - remove raw view button for link groups on the cont3xt search page
  - cont3xt - Overview shortcut
  - cont3xt - fixed overviews not updating on switch
  - db.pl - don't allow '.' to be used for sync/add path
  - viewer - fixed ipv6 session display issues when :: in ip
  - viewer - http display rewritten to not depending on nodejs internals